--- a/API/package.json
+++ b/API/package.json
@@ -15,12 +15,18 @@
   "author": "noobAlliance",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.2.6",
+    "btoa": "^1.2.1",
     "client-oauth2": "^4.3.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.17.2",
-    "mongodb": "^4.13.0"
+    "form-data": "^4.0.0",
+    "mongodb": "^4.13.0",
+    "pug": "^3.0.2"
   },
   "devDependencies": {
+    "@types/btoa": "^1.2.3",
     "@types/express": "^4.17.14",
     "@types/node": "^18.11.9",
     "@typescript-eslint/eslint-plugin": "^5.43.0",
@@ -31,7 +37,7 @@
     "eslint-plugin-n": "^15.5.1",
     "eslint-plugin-promise": "^6.1.1",
     "nodemon": "^2.0.20",
-    "typescript": "^4.9.3",
-    "prettier": "^2.8.0"
+    "prettier": "^2.8.0",
+    "typescript": "^4.9.3"
   }
 }
